@@ -92,9 +92,6 @@ ISABELLE_LOGIC=HOL
 # Where to look for docs (multiple dirs separated by ':').
 ISABELLE_DOCS="$ISABELLE_HOME/doc"
 
-# Preferred document format
-ISABELLE_DOC_FORMAT=pdf
-
 # PDF file viewer (command-line to eval)
 case "$ISABELLE_PLATFORM_FAMILY" in
   linux)
